--- a/webinars & workshops/31 Mar 2021 Webinar - Beam Data Visualization/BeamDataVisualization/App.config
+++ b/webinars & workshops/31 Mar 2021 Webinar - Beam Data Visualization/BeamDataVisualization/App.config
@@ -1,12 +1,27 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
     <add key="PhantomThickness" value="40.0"/>
     <add key="6X" value="1.5"/>
-    <add key="10X" value="2.3"/>
-    <add key="15X" value="2.7"/>
+    <add key="6X-FFF" value="1.5"/>
+    <add key="10X" value="2.4"/>
+    <add key="10X-FFF" value="2.4"/>
+    <add key="15X" value="3.0"/>
+    <add key="6E" value="1.3"/>
+    <add key="9E" value="2.0"/>
+    <add key="12E" value="2.8"/>
+    <add key="15E" value="3.1"/>
+    <add key="18E" value="2.4"/>
   </appSettings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="OxyPlot" publicKeyToken="638079a8f0bd61e9" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-2.1.0.0" newVersion="2.1.0.0"/>
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
