--- a/webinars & workshops/31 Mar 2021 Webinar - Beam Data Visualization/BeamDataVisualization/packages.config
+++ b/webinars & workshops/31 Mar 2021 Webinar - Beam Data Visualization/BeamDataVisualization/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="OxyPlot.Core" version="2.0.0" targetFramework="net452" />
-  <package id="OxyPlot.Wpf" version="2.0.0" targetFramework="net452" />
-  <package id="Prism.Core" version="8.0.0.1909" targetFramework="net452" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net452" />
+  <package id="OxyPlot.Core" version="2.1.0" targetFramework="net45" />
+  <package id="OxyPlot.Wpf" version="2.1.0" targetFramework="net45" />
+  <package id="OxyPlot.Wpf.Shared" version="2.1.0" targetFramework="net45" />
+  <package id="Prism.Core" version="8.0.0.1909" targetFramework="net45" requireReinstallation="true" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" requireReinstallation="true" />
 </packages>
