--- a/webinars & workshops/16 Jan 2020 Webinar/AppsCombined/DoseMetricExample/DoseMetricExample/packages.config
+++ b/webinars & workshops/16 Jan 2020 Webinar/AppsCombined/DoseMetricExample/DoseMetricExample/packages.config
@@ -4,6 +4,6 @@
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net45" />
   <package id="OxyPlot.Core" version="2.0.0" targetFramework="net45" />
   <package id="OxyPlot.Wpf" version="2.0.0" targetFramework="net45" />
-  <package id="Prism.Core" version="7.2.0.1422" targetFramework="net45" />
-  <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" />
+  <package id="Prism.Core" version="8.1.97" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" requireReinstallation="true" />
 </packages>
