--- a/webinars & workshops/31 Mar 2021 Webinar - Beam Data Visualization/BeamDataVisualization/BeamDataVisualization.csproj
+++ b/webinars & workshops/31 Mar 2021 Webinar - Beam Data Visualization/BeamDataVisualization/BeamDataVisualization.csproj
@@ -37,7 +37,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>\\aristrtst001\VA_DATA_Test%24\ProgramData\Vision\PublishedScripts\Beam\</OutputPath>
+    <OutputPath>\\aristrprd001\VA_DATA%24\ProgramData\Vision\PublishedScripts\Beam\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>x64</PlatformTarget>
